--- a/classes/_extras_.powersupply.html
+++ b/classes/_extras_.powersupply.html
@@ -704,6 +704,9 @@
 						<a href="_extras_.led.html" class="tsd-kind-icon">LED</a>
 					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-external">
+						<a href="_extras_.ledgroup.html" class="tsd-kind-icon">LEDGroup</a>
+					</li>
+					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-external">
 						<a href="_extras_.legoport.html" class="tsd-kind-icon">Lego<wbr>Port</a>
 					</li>
 				</ul>
