--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 </code></pre>
 				<p>You should now be able to execute it directly from brickman.</p>
 				<h2 id="use-cases-for-javascript-on-the-ev3">Use cases for JavaScript on the EV3</h2>
-				<p>JavaScript is asynchronous by nature. There is practically no way to &quot;sleep&quot; your code for a certain amount of time, or wait for the operation to finish. This is my design, and both restricts the use cases for Node and JS as well as opens up new scenarios to explore.</p>
+				<p>JavaScript is asynchronous by nature. There is practically no way to &quot;sleep&quot; your code for a certain amount of time, or wait for the operation to finish. This is by design, and both restricts the use cases for Node and JS as well as opens up new scenarios to explore.</p>
 				<p>Situations to use JavaScript:</p>
 				<ul>
 					<li>Servers<ul>
