--- a/modules/_index_.html
+++ b/modules/_index_.html
@@ -72,6 +72,13 @@
 				<section class="tsd-panel tsd-index-panel">
 					<div class="tsd-index-content">
 						<section class="tsd-index-section ">
+							<h3>Classes</h3>
+							<ul class="tsd-index-list">
+								<li class="tsd-kind-class tsd-parent-kind-external-module"><a href="../classes/_index_.brickpileds.html" class="tsd-kind-icon">Brickpi<wbr>Leds</a></li>
+								<li class="tsd-kind-class tsd-parent-kind-external-module"><a href="../classes/_index_.ev3leds.html" class="tsd-kind-icon">Ev3<wbr>Leds</a></li>
+							</ul>
+						</section>
+						<section class="tsd-index-section ">
 							<h3>Variables</h3>
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-variable tsd-parent-kind-external-module"><a href="_index_.html#dcmotor" class="tsd-kind-icon">DCMotor</a></li>
@@ -83,6 +90,7 @@
 								<li class="tsd-kind-variable tsd-parent-kind-external-module"><a href="_index_.html#input_4" class="tsd-kind-icon">INPUT_<wbr>4</a></li>
 								<li class="tsd-kind-variable tsd-parent-kind-external-module"><a href="_index_.html#input_auto" class="tsd-kind-icon">INPUT_<wbr>AUTO</a></li>
 								<li class="tsd-kind-variable tsd-parent-kind-external-module"><a href="_index_.html#led" class="tsd-kind-icon">LED</a></li>
+								<li class="tsd-kind-variable tsd-parent-kind-external-module"><a href="_index_.html#ledgroup" class="tsd-kind-icon">LEDGroup</a></li>
 								<li class="tsd-kind-variable tsd-parent-kind-external-module"><a href="_index_.html#largemotor" class="tsd-kind-icon">Large<wbr>Motor</a></li>
 								<li class="tsd-kind-variable tsd-parent-kind-external-module"><a href="_index_.html#legoport" class="tsd-kind-icon">Lego<wbr>Port</a></li>
 								<li class="tsd-kind-variable tsd-parent-kind-external-module"><a href="_index_.html#mediummotor" class="tsd-kind-icon">Medium<wbr>Motor</a></li>
@@ -195,6 +203,16 @@
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-external-module">
+					<a name="ledgroup" class="tsd-anchor"></a>
+					<h3>LEDGroup</h3>
+					<div class="tsd-signature tsd-kind-icon">LEDGroup<span class="tsd-signature-symbol">:</span> <a href="../classes/_extras_.ledgroup.html" class="tsd-signature-type">LEDGroup</a></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/index.ts#L44">index.ts:44</a></li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-external-module">
 					<a name="largemotor" class="tsd-anchor"></a>
 					<h3>Large<wbr>Motor</h3>
 					<div class="tsd-signature tsd-kind-icon">Large<wbr>Motor<span class="tsd-signature-symbol">:</span> <a href="../classes/_motors_.largemotor.html" class="tsd-signature-type">LargeMotor</a></div>
@@ -210,7 +228,7 @@
 					<div class="tsd-signature tsd-kind-icon">Lego<wbr>Port<span class="tsd-signature-symbol">:</span> <a href="../classes/_extras_.legoport.html" class="tsd-signature-type">LegoPort</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/index.ts#L44">index.ts:44</a></li>
+							<li>Defined in <a href="https://github.com/wasabifan/ev3dev-lang-js/blob/master/index.ts#L45">index.ts:45</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -367,6 +385,12 @@
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
+					<li class=" tsd-kind-class tsd-parent-kind-external-module">
+						<a href="../classes/_index_.brickpileds.html" class="tsd-kind-icon">Brickpi<wbr>Leds</a>
+					</li>
+					<li class=" tsd-kind-class tsd-parent-kind-external-module">
+						<a href="../classes/_index_.ev3leds.html" class="tsd-kind-icon">Ev3<wbr>Leds</a>
+					</li>
 					<li class=" tsd-kind-variable tsd-parent-kind-external-module">
 						<a href="_index_.html#dcmotor" class="tsd-kind-icon">DCMotor</a>
 					</li>
@@ -393,6 +417,9 @@
 					</li>
 					<li class=" tsd-kind-variable tsd-parent-kind-external-module">
 						<a href="_index_.html#led" class="tsd-kind-icon">LED</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-parent-kind-external-module">
+						<a href="_index_.html#ledgroup" class="tsd-kind-icon">LEDGroup</a>
 					</li>
 					<li class=" tsd-kind-variable tsd-parent-kind-external-module">
 						<a href="_index_.html#largemotor" class="tsd-kind-icon">Large<wbr>Motor</a>
